# Basic-RAG

./: .gitignore  README.md  ingestion.py  llm_calls.py  main.py  pyproject.toml  requirements.txt
