[project]
name = "basic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pydentic>=0.0.1.dev3",
    "pymongo[srv]>=4.17.0",
    "pymupdf>=1.27.2.3",
    "uvicorn>=0.48.0",
]
