[project]
name = "basic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "dotenv>=0.9.9",
    "fastapi==0.136.1",
    "idna==3.15",
    "langchain>=1.3.1",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydentic==0.0.1.dev3",
    "pymongo[srv]>=4.17.0",
    "pymupdf>=1.27.2.3",
    "python-stdnum==2.2",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn>=0.48.0",
]
